--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar" >
         //android:theme="@style/AppTheme"
         <activity
             android:name=".MainActivity"
@@ -24,6 +24,10 @@
         <activity
             android:name=".calendar"
             android:label="@string/title_activity_calendar" >
+        </activity>
+        <activity
+            android:name=".ViewSchedule"
+            android:label="@string/title_activity_view_schedule" >
         </activity>
     </application>
 
