--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.cz2006androidproject" >
+    package="com.example.android.cz2006androidproject">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar" >
         //android:theme="@style/AppTheme"
         <activity
-            android:name=".MainActivity"
+            android:name="boundary.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,11 +18,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".search"
+            android:name="boundary.search"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".calendar"
+            android:name="boundary.calendar"
             android:label="@string/title_activity_calendar" >
         </activity>
         <activity
