--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name=".ScheduleListView"
             android:label="@string/title_activity_schedule_list_view" >
         </activity>
+        <activity
+            android:name=".SearchResult"
+            android:label="@string/title_activity_search_result" >
+        </activity>
     </application>
 
 </manifest>
