--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar" >
         //android:theme="@style/AppTheme"
         <activity
-            android:name="boundary.MainActivity"
+            android:name="Boundary.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,15 +18,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="boundary.search"
+            android:name="Boundary.SearchView"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="boundary.calendar"
+            android:name="Boundary.Calendar"
             android:label="@string/title_activity_calendar" >
         </activity>
         <activity
-            android:name="boundary.TravelPlanner"
+            android:name="Boundary.TravelPlanner"
             android:label="@string/title_activity_view_schedule" >
         </activity>
         <activity
@@ -34,24 +34,32 @@
             android:label="@string/title_activity_view_schedule" >
         </activity>
         <activity
-            android:name=".ViewDetails"
+            android:name="Boundary.ViewDetails"
             android:label="@string/title_activity_view_details" >
         </activity>
         <activity
-            android:name=".ScheduleListView"
+            android:name="Boundary.ScheduleListView"
             android:label="@string/title_activity_schedule_list_view" >
         </activity>
         <activity
-            android:name=".MapView"
+            android:name="Boundary.MapView"
             android:label="@string/title_activity_map_view" >
         </activity>
         <activity
-            android:name=".PlanChoicesByTaxi"
+            android:name="Boundary.PlanChoicesByTaxi"
             android:label="@string/title_activity_plan_choices_by_taxi" >
         </activity>
         <activity
-            android:name=".PlanChoicesByPublicTransport"
+            android:name="Boundary.PlanChoicesByPublicTransport"
             android:label="@string/title_activity_plan_choices_by_public_transport" >
+        </activity>
+        <activity
+            android:name="Boundary.SearchResult"
+            android:label="@string/title_activity_search_result" >
+        </activity>
+        <activity
+            android:name=".ScheduleTabSwitch"
+            android:label="@string/title_activity_schedule_tab_switch" >
         </activity>
     </application>
 
