--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,52 +9,51 @@
         android:theme="@style/Theme.AppCompat.NoActionBar" >
         //android:theme="@style/AppTheme"
         <activity
-            android:name="Boundary.MainActivity"
+            android:name="boundary.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="Boundary.SearchView"
+            android:name="boundary.SearchView"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="Boundary.Calendar"
+            android:name="boundary.Calendar"
             android:label="@string/title_activity_calendar" >
         </activity>
         <activity
-            android:name="Boundary.TravelPlanner"
+            android:name="boundary.TravelPlanner"
             android:label="@string/title_activity_view_schedule" >
         </activity>
         <activity
-            android:name="Boundary.ViewDetails"
+            android:name="boundary.ViewDetails"
             android:label="@string/title_activity_view_details" >
         </activity>
         <activity
-            android:name="Boundary.ScheduleListView"
+            android:name="boundary.ScheduleListView"
             android:label="@string/title_activity_schedule_list_view" >
         </activity>
         <activity
-            android:name="Boundary.MapView"
+            android:name="boundary.MapView"
             android:label="@string/title_activity_map_view" >
         </activity>
         <activity
-            android:name="Boundary.PlanChoicesByTaxi"
+            android:name="boundary.PlanChoicesByTaxi"
             android:label="@string/title_activity_plan_choices_by_taxi" >
         </activity>
         <activity
-            android:name="Boundary.PlanChoicesByPublicTransport"
+            android:name="boundary.PlanChoicesByPublicTransport"
             android:label="@string/title_activity_plan_choices_by_public_transport" >
         </activity>
         <activity
-            android:name="Boundary.SearchResult"
+            android:name="boundary.SearchResult"
             android:label="@string/title_activity_search_result" >
         </activity>
         <activity
-            android:name=".ScheduleTabSwitch"
+            android:name="boundary.ScheduleTabSwitch"
             android:label="@string/title_activity_schedule_tab_switch" >
         </activity>
     </application>
