--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         <uses-permission android:name="android.permission.INTERNET"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAW8kHfzZxHOvGWOWODBoa6AbKsNW8lb3k"/>
+            android:value="AIzaSyAW8kHfzZxHOvGWOWODBoa6AbKsNW8lb3k"
+            />
+
+        <!--AIzaSyAW8kHfzZxHOvGWOWODBoa6AbKsNW8lb3k-->
         <activity
             android:name="boundary.MainActivity"
             android:label="@string/app_name" >
@@ -77,12 +80,12 @@
             android:label="@string/title_activity_schedule_tab_switch" >
         </activity>
 
-        <meta-data
+        <!--<meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyBOZDgvj6sMs2NBTToGamJRiin6qDU9R4o" />-->
 
         <activity
             android:name=".MapsViewer"
